Added an implementation of ML strings
Ignore-this: b774321af42f3cab7e8f10e365b77b2b

darcs-hash:20100203142221-41a61-1ac96642eb62c3ed815b72da24fdbe74aa4bcb73

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,7 @@
 
 BUGS
 ====
-- check BLEINT, BGTINT, ...
-- string access should return an integer!!!
+- check BGTINT, BLEINT, ...
 
 IMPROVEMENTS
 ============
@@ -33,3 +32,15 @@ DATA ANALYSIS
 - correct analysis (side-effects...)
 - faster algorithm
 - interprocedural analysis
+
+================================
+
+function encode_utf8( s )
+{
+  return unescape( encodeURIComponent( s ) );
+}
+
+function decode_utf8( s )
+{
+  return decodeURIComponent( escape( s ) );
+}
