Disable some debugging output
Ignore-this: 49eadf521cd0469c19b9794d8ef04011

darcs-hash:20100506125339-41a61-e9ddedc84bdfc8318b6201964c434278720a9347

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,10 @@ Priorities
 - function representation/call (see runtime/runtime.js)
 - integer arithmetic
 
+- primitive [ULT] not implemented
 - method calls
+
+- print missing primitives
 
 - options on command line
   ==> compact mode
