Runtime clean-up
Ignore-this: 2c24b9f083acbb113eed2d7bfea05d44

darcs-hash:20100506163723-41a61-50f51fc36b9d8af1afd3b43526a6539e3f3b92fe

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,15 @@
 Priorities
 ==========
-- function representation/call (see runtime/runtime.js)
 - integer arithmetic
 
 - primitive [ULT] not implemented
 - method calls
+
+- check Control.block_simpl
+
+- Can we avoid spurious conversions from boolean to integers???
+  ===> explicit conversion to boolean; specialized "if" that operates
+       on booleans directly
 
 - print missing primitives
 
@@ -12,7 +17,7 @@ Priorities
   ==> compact mode
   ==> debugging options
 
-- inlining
+- inlining (especially of functions that are used only once!)
 - constant hoisting (including functions, out of loops and functions)
 
 - using continuation with multiples arguments
@@ -97,6 +102,9 @@ NEW FEATURES
 - Map Caml objects to Javascript objects
 
 - dynamic linking? (code generation from cmo files)
+
+- Can we use the debugger information to generate specialized code?
+  (Use objects rather than arrays for tuples, ...)
 
 DATA REPRESENTATION
 ===================
