Small bugs fixed
Ignore-this: 7cfe744b0c64cd2ef36fe974f617719b

darcs-hash:20100507194919-41a61-76974c3033769383c1bee8180ab8a872614adff4

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,7 @@ Priorities
   ==> compact mode
   ==> debugging options
 
-- bug when compiling ocaml
+- bug when compiling ocamlc
 
 
 - Can we avoid spurious conversions from boolean to integers???
