Start of a library
Ignore-this: 59ae92b86e9d7a80d828b98d3c633640

darcs-hash:20100507205034-41a61-8088c67d4a505114a8f550dad71f3357b13147df

--- a/TODO.txt
+++ b/TODO.txt
@@ -118,9 +118,6 @@ type 'a nullable
   (flatten : 'a nullable nullable -> 'a nullable)
 
 Use 32 bit signed integer (following the spec!)
-===> bitwise operator are ok; the result of arithmeric operations must
-     be truncated back to 32 bits
-     (x|0 !)
 ===> we do not have enough bits for multiplication :-(
 ===> should probably also have 31 bit as an option, for compatibility...
 
@@ -155,6 +152,8 @@ Matthew Might               Yannis Smaragdakis             David Van Horn
 
 Use window.postMessage instead of setTimeout for yield (setTimeout
 always waits a bit!)
+==> but window.postMessage is synchronous in IE8
+    + does not cooperate well with other users of message events
 
 ==================================
 
