--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,10 @@ Priorities
 ==========
 - bug when compiling ocamlc
 
+- rebind module Js with our own module
+  ==> include pieces of javascript
+  function: Js.const : string -> 'a
+
 
 - Can we avoid spurious conversions from boolean to integers???
   ===> explicit conversion to boolean; specialized "if" that operates
