Boulderdash: animations using Lwt
Ignore-this: a8688a377f5c088094011bcac79a78ac

darcs-hash:20100510110815-41a61-c7fa80707e18dd7eff42671c0a12f3723e671258

--- a/TODO.txt
+++ b/TODO.txt
@@ -5,7 +5,8 @@ Priorities
 - rebind module Js with our own module
   ==> include pieces of javascript
   function: Js.const : string -> 'a
-
+  ==> use debugger information to print location information in case
+      of error?
 
 - Can we avoid spurious conversions from boolean to integers???
   ===> explicit conversion to boolean; specialized "if" that operates
