Beginning of a DOM implementation
Ignore-this: 9116529a05ddb117d1d0dc8773a8245

darcs-hash:20100511143329-41a61-8f296d27f8813ed2c4275959d568b2d936f396dd

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,9 +4,13 @@ Priorities
 
 - we should use only local variables in order to be more robust...
 
+- caml_make_array is a no-op...
+
 - there should be a way to pass a list of know primitives (and there
   properties: pure, ...) to the compiler and get a warning for missing
   primitives
+
+- merge all source files (including javascript) into a single file
 
 - rebind module Js with our own module
   ==> include pieces of javascript
