--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,12 @@
 Priorities
 ==========
+- asynchronous + portable http_get API
+
+- event handlers:
+  use a wrapper:
+	if (!e) e = window.event;
+        ....
+
 - how do we deal with possibly undefined properties?
 
 - we have to make sure that functions passed to javascript have the
@@ -7,14 +14,11 @@ Priorities
 
 - syntactic sugar for Javascript literal strings
   + optimization to avoid going through Caml strings
-- operators ##'foo'
 
 - merge all source files (including javascript) into a single file
 - there should be a way to pass a list of know primitives (and their
   properties: pure, ...) to the compiler and get a warning for missing
   primitives
-
-- we should use only local variables in order to be more robust...
 
 - bug when compiling ocamlc
 
