Library clean-up
Ignore-this: 85eb0da94c34c0036554a8e678183036

darcs-hash:20100516203458-41a61-63ae443cc3e366f5e1b475464b12368b3875132e

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 Priorities
 ==========
+- Use ~~x instead of x|0? (more parentheses, but maybe faster?)
+
 - Nullable.t ==> opt
 
 - asynchronous + portable http_get API
